full card has been created

--- a/index.html
+++ b/index.html
@@ -16,32 +16,36 @@
 
 <body>
     <div class="container">
-        <div class="img-container">
-
-        </div>
-        <div class="info-container">
-            <div class="heading">
-                <h3>Maria Paul</h3>
+        <div class="card-container">
+            <div class="img-container">
+                <div class="profile">
+                    <img src="./images/profile-1.jpg" alt="">
+                </div>
             </div>
-            <div class="destination">
-                <p>Full Stack Developer at Google</p>
-            </div>
-            <div class="buttons">
-                <span>
-                    <a href="" class="btn">Contact</a>
-                </span>
-                <span>
-                    <a href="" class="btn">Follow</a>
-                </span>
-            </div>
-            <div class="social-icons">
-                <ul>
-                    <li><a href="#"><i class="fa-brands fa-facebook-square"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-                </ul>
+            <div class="info-container">
+                <div class="heading">
+                    <h3>Maria Paul</h3>
+                </div>
+                <div class="destination">
+                    <p>Full Stack Developer at Google</p>
+                </div>
+                <div class="buttons">
+                    <span>
+                        <a href="#" class="btn">Contact</a>
+                    </span>
+                    <span>
+                        <a href="#" id="btn">Follow</a>
+                    </span>
+                </div>
+                <div class="social-icons">
+                    <ul>
+                        <li><a href="#"><i class="fa-brands fa-facebook-square"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
